reducing retries to one, fixing parameterized tests, adding missing null tests, fixing constraint enforcement, fixing alloc ordering